@@ -2,6 +2,7 @@ package org.cloudburstmc.server.utils;
 
 import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -14,7 +15,7 @@ public class HastebinUtility {
     public static final Pattern PATTERN = Pattern.compile("\\{\"key\":\"([\\S\\s]*)\"}");
 
     public static String upload(final String string) throws IOException {
-        final URL url = new URL(BIN_URL);
+        final URL url = URI.create(BIN_URL).toURL();
         final HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 
         connection.setRequestMethod("POST");
